// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="coffee Mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage Mostrar componente con la imagen perzonalizada 1`] = `
<img
  alt="coffee Mug"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
